--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -29,6 +29,8 @@ padding.y = 10
 decorations = "Full"
 decorations_theme_variant = "Light" # "Dark"
 
+option_as_alt = "Both"
+
 [font]
 
 normal.family = "DroidsansMono Nerd Font"
